# ToDoShell

./: .env.example  README.md  READMEE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
prisma/: schema.prisma
